# desktop

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  build.py  pyproject.toml  requirements.txt  setup.cfg  tilia.spec
.github/workflows/: build-test.yml  build.yml  draft-pdf.yml  run-tests.yml
docs/: TESTING.md
paper/: paper.bib  paper.md
tests/: conftest.py  constants.py  mock.py  test_app.py  test_boot.py  test_dirs.py  test_export.py  test_ffmpeg.py  test_file.tla  test_file_manager.py  test_main.py  test_metadata_custom_fields.tla  test_settings.py  test_settings.toml  test_undo_manager.py  testvideo.m4a  utils.py
tests/file/: test_file.tla  test_file_manager.py  test_media_metadata.py
tests/parsers/: test_base_import_from_csv.py  test_csv.py  test_markers_by_measure_from_csv.csv  test_markers_by_time_from_csv.csv  test_markers_by_time_from_csv_raises_error.csv
tests/player/: test.mkv  test_loader.py  test_player.py
tests/resources/: example.musicxml  example_multistaff.musicxml
tests/timelines/: test_collection.py  test_metric_position.py  test_slider.py  test_timeline_collection.py  test_timeline_component_manager.py
tests/ui/: test_menus.py  test_qtui.py  test_tkinterui.py
tilia/: __init__.py  _tilia.py  app.py  auto_save.py  boot.py  clipboard.py  constants.py  dirs.py  enums.py  errors.py  events.py  events_old.py  exceptions.py  ffmpeg.py  file_manager.py  files.py  globals_.py  local_dev_code.py  log.py  logging.py  main.py  media_exporter.py  misc_enums.py  repr.py  settings.py  test_beat_cli.tla  tilia_cli.txt  undo_manager.py  utils.py
tilia/explorer/: __init__.py  explorer.py  explorer_gui.py  explorer_types.py
tilia/file/: autosave.py  common.py  file_manager.py  media_metadata.py  tilia_file.py
tilia/media/: constants.py  exporter.py  ffmpeg.py  loader.py
tilia/parsers/: __init__.py  csv.py  test.csv
tilia/player/: player.py  player_ui.py
(+434 files in other folders)
