[metadata]
name = tilia
version = 0.1
description = A GUI-based software for creating and visualizing annotations over audio and video files.
author = Felipe Defensor

[options]
packages = tilia
install_requires =
    pandas>=1.4.3
    pygame>=2.1.2
    python_vlc>=3.0.16120
    appdirs>=1.4.4
    tomlkit>=0.11.6
    pydub>=0.25.1
python_requires = >=3.10.9
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
