[metadata]
name = tilia
version = 0.5.9
description = A GUI-based software for creating and visualizing annotations over audio and video files.
author = Felipe Defensor

[options]
packages = tilia
install_requires =
    lxml>=5.3.0
    platformdirs>=4.0.0
    pydub>=0.25.1
    prettytable>=3.7.0
    music21>=9.1
    PyQt6==6.6.0
    PyQt6-Qt6==6.6.0
    PyQt6-sip==13.6.0
    PyQt6-WebEngine==6.6.0
    PyQt6-WebEngine-Qt6==6.6.0
    python-dotenv>=1.0.1
    pypdf~=4.2.0
    pytube~=15.0.0
    sentry-sdk>=2.21.0
python_requires = >=3.10
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.0.0
    pytest-env>=1.1.5
    colorama>=0.4.6
ci-tests =
    coverage>=7.0.0
    coverage-badge>=1.0.0
    flake8>=7.0.0
    pytest-cov>=6.0.0

[flake8]
max-line-length = 88
per-file-ignores = __init__.py: F401
extend-ignore = E203,E501
exclude = tilia/dev
